@@ -10,10 +10,10 @@ import com.robertx22.age_of_exile.saveclasses.gearitem.gear_bases.*;
 import com.robertx22.age_of_exile.saveclasses.item_classes.GearItemData;
 import com.robertx22.age_of_exile.uncommon.enumclasses.Elements;
 import com.robertx22.age_of_exile.uncommon.enumclasses.ModType;
-import com.robertx22.library_of_exile.utils.CLOC;
 import com.robertx22.age_of_exile.uncommon.utilityclasses.NumberUtils;
 import com.robertx22.age_of_exile.uncommon.utilityclasses.RandomUtils;
 import com.robertx22.age_of_exile.uncommon.wrappers.SText;
+import com.robertx22.library_of_exile.utils.CLOC;
 import info.loenwind.autosave.annotations.Storable;
 import info.loenwind.autosave.annotations.Store;
 import net.minecraft.text.LiteralText;
@@ -71,8 +71,6 @@ public class BaseStatsData implements IRerollable, IStatsContainer, IGearPartToo
         MutableText eledmg = null;
         MutableText critchance = null;
 
-        float totalDmg = 0;
-
         String eleDmgs = "";
 
         for (ExactStatData exactStatData : all) {
@@ -95,8 +93,6 @@ public class BaseStatsData implements IRerollable, IStatsContainer, IGearPartToo
                     eleDmgs += dot + " " + stat.getElement().format +
                         NumberUtils.format(exactStatData.getFirstValue()) + "-" + NumberUtils.format(exactStatData.getSecondValue());
                 }
-
-                totalDmg += exactStatData.getAverageValue();
 
             } else {
 
