@@ -10,6 +10,9 @@ Repair it first, because any hit will break it. This is because when max durabil
 - added runewords!
 - added socketing station!
 
+Both gems, runes and runewords are datapacks!
+Runewords can be added by datapacks, runes and gems currenltly can't. But you can edit them!
+
 Gems are basically the jewels, but stackable and you can craft them into higher level versions.
 They're also datapacks!
 I have an idea how to add jewels back in, and they'll be more interesting :)
@@ -35,6 +38,7 @@ This should hopefully stop the bug reports of "I can't heal my friend". But whet
 - stopped mobs from spawning on daytime and made their spawn restrictions like vanilla mobs. So should be less spawns on nighttime too.
 - used the proper creative tab code, now no longer replace vanilla brewing tab. Seriously, nobody noticed?
 - added new stat, +maximum resistance
+- common items can now have 5 sockets, while magical items only 2.
 
 v.1.1.3
 - fix day mobs config not working
